--- a/email-notification/src/main/resources/templates/ticketcanceled.html
+++ b/email-notification/src/main/resources/templates/ticketcanceled.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-    <title>Ticket email</title>
+    <title>Ticket canceled email</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
           rel="stylesheet">
     <style>
@@ -18,8 +18,6 @@
         img#logo {
             width: 150px;
             height: auto;
-            position: absolute;
-            right: 0;
         }
 
         p {
@@ -93,33 +91,28 @@
         <th>
             <img alt="logo-black" id="logo" src="cid:image">
             <p class="mt-3 mb-3">
-                Dear <strong
-                    th:text="${data.getOrDefault('firstname', '-') + ' ' + data.getOrDefault('lastname', '-')}"></strong>,<br>
-                We are glad to confirm your ticket with Eve Ticketing System.
-            </p>
-            <p class="mt-3">
-                <span><strong
-                        th:text="${data.getOrDefault('userFirstname', '-') + ' ' + data.getOrDefault('userLastname', '-')}"></strong></span>
-                <span>, this is your ticket for event </span><span><strong
-                    th:text="${data.getOrDefault('event', '-')}"></strong></span>
+                <span>
+                    Dear <strong
+                        th:text="${data.getOrDefault('userFirstname', '-') + ' ' + data.getOrDefault('userLastname', '-')}"></strong>,<br>
+                    We regret to inform you that your ticket for event <strong
+                        th:text="${data.getOrDefault('event', '-')}"></strong> was cancelled.
+                </span>
+                <span>
+                    The whole amount of money for reservation has been refunded.</span>
             </p>
             <table id="ticket">
                 <tr>
                     <th>Code</th>
-                    <th>Full name</th>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
                     <th>Phone number</th>
-                    <th>Sector</th>
-                    <th>Row</th>
-                    <th>Number</th>
                     <th>Paid</th>
                 </tr>
                 <tr>
                     <td th:text="${data.getOrDefault('code', '-')}"></td>
-                    <td th:text="${data.getOrDefault('firstname', '-') + ' ' + data.getOrDefault('lastname', '-')}"></td>
+                    <td th:text="${data.getOrDefault('firstname', '-')}"></td>
+                    <td th:text="${data.getOrDefault('lastname', '-')}"></td>
                     <td th:text="${data.getOrDefault('phoneNumber', '-')}"></td>
-                    <td th:text="${data.getOrDefault('sector', '-')}"></td>
-                    <td th:text="${data.getOrDefault('row', '-')}"></td>
-                    <td th:text="${data.getOrDefault('number', '-')}"></td>
                     <td th:text="${data.getOrDefault('paid', '-')}"></td>
                 </tr>
             </table>
